# mlops_zoomcamp_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
airflow/: requirements.txt
airflow/.astro/: config.yaml  test_dag_integrity_default.py
airflow/dags/: training_pipeline.py
airflow/include/: train.py
airflow/include/dataprep/: dataprep.py
airflow/tests/: test_training_pipeline.py
notebooks/: insurance_cross_sell_prediction.ipynb
src/utils/: constants.py  deploy_endpoint.py  download_raw_data.py
terraform/dev/: main.tf
terraform/prod/: main.tf
