[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
black = "^24.4.2"
isort = "^5.13.2"
imbalanced-learn = "^0.12.3"
mlflow = "^2.14.3"
ydata-profiling = "^4.8.3"
ipywidgets = "^8.1.3"
boto3 = "^1.34.145"
virtualenv = "^20.26.3"
sagemaker = "^2.226.1"
pre-commit = "^3.7.1"
apache-airflow = "^2.9.3"
pytest = "^8.3.2"


[tool.poetry.group.setup.dependencies]
kaggle = "^1.6.14"
